force-app/main/default/objects/OCX_Source_Intelligence_Run__c/OCX_Source_Intelligence_Run__c.object-meta.xml
<CustomObject>
    <description>Run-level lineage and purge boundary for generated source intelligence.</description>
    <label>Source Intelligence Run</label>
    <nameField>
        <displayFormat>SIR-{000000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Intelligence Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>