force-app/main/default/objects/OCX_Source_Intelligence_Run__c/fields/Cohort_Derived_Count__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Derived_Count__c</fullName>
    <label>Cohort Derived Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>