force-app/main/default/objects/OCX_Source_Intelligence_Run__c/fields/Direct_Experience_Count__c.field-meta.xml
<CustomField>
    <fullName>Direct_Experience_Count__c</fullName>
    <label>Direct Experience Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>