force-app/main/default/objects/OCX_Source_Intelligence_Run__c/fields/Feature_Definition_Count__c.field-meta.xml
<CustomField>
    <fullName>Feature_Definition_Count__c</fullName>
    <label>Feature Definition Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>