force-app/main/default/objects/OCX_Source_Intelligence_Run__c/fields/Ingredient_Count__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Count__c</fullName>
    <label>Ingredient Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>