force-app/main/default/objects/OCX_Source_Intelligence_Run__c/fields/Profile_Feature_Count__c.field-meta.xml
<CustomField>
    <fullName>Profile_Feature_Count__c</fullName>
    <label>Profile Feature Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>