force-app/main/default/objects/OCX_Source_Intelligence_Run__c/fields/Run_Type__c.field-meta.xml
<CustomField>
    <fullName>Run_Type__c</fullName>
    <label>Run Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>