force-app/main/default/objects/OCX_Source_Intelligence_Run__c/fields/Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Schema_Version__c</fullName>
    <label>Schema Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>